crates/taskfleet/tests/snapshots/envelope_snapshots__skill_list_jsonl.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
assertion_line: 234
expression: value
---
{"data":{"install":{"accepted_values":["claude","pi","codex","all"],"default":"all","dry_run_flag":"--dry-run","force_flag":"--force","interactive":false,"layouts":[{"agent":"claude","form":"agent-skill-tree","path":".claude/skills/<name>/..."},{"agent":"pi","form":"agent-skill-tree","path":".pi/agent/skills/<name>/..."},{"agent":"codex","form":"self-contained-prompt","path":".codex/prompts/<name>.md"}],"no_clobber_default":true,"overwrite_requires_force":true,"selection_flag":"--agent","target_flag":"--target"},"skills":[{"cli_version":"0.5.1","description":"First read for any agent that has just discovered the `taskfleet` binary mid-conversation. Teaches the overall shape of the tool — runs, supervisors, nodes, discussions, spinoffs — and the canonical create→supervise→collect-reports cycle. Use when asked \"what is taskfleet\", when the binary appears in a session for the first time, or before issuing the first non-trivial command.","name":"taskfleet-overview","skill_schema_version":1},{"cli_version":"0.5.1","description":"Read the output of `taskfleet run list` and `taskfleet run show` to inspect the state of orchestrated agent workflows (worktrees, fan-outs, spinoffs). Use when asked about run status, when triaging an in-flight orchestration, or before deciding whether to spawn, resume, or abort work.","name":"taskfleet-run-overview","skill_schema_version":1},{"cli_version":"0.5.1","description":"Spawn an autonomous spinoff worktree via taskfleet — a single fire-and-forget agent that takes a focused task, executes it in its own git worktree, and merges itself back. Use when the user wants a parallel sub-task handled without interactive review.","name":"taskfleet-spawn-spinoff","skill_schema_version":1},{"cli_version":"0.5.1","description":"Spawn an autonomous spinoff worktree agent via `taskfleet run create --kind spinoff` — one fire-and-forget agent that takes a focused task, executes it in its own git worktree, and merges itself back to the source branch. Use when the user says `/worktree-spinoff <task>`, when a parallel sub-task can be handled without interactive review, or when a driver (`/fan-out`) needs to spawn one autonomous unit. NOT for hands-on interactive review (add `--interactive` to `run create` so the supervisor waits for an explicit `run merge`/`run cancel`), N identical units (`/fan-out`), or dependency-ordered features (stint waves).","name":"worktree-spinoff","skill_schema_version":1},{"cli_version":"0.5.1","description":"Merge a completed taskfleet worktree branch back to its source/parent branch and tear the worktree down — branch rebased + merged, terminal `node report` submitted, and the tmux window + worktree + branch removed by the supervisor, all in ONE `taskfleet run merge` call. Use when an autonomous worktree (spinoff, research, technical-decision, or a fan-out unit) reaches its merge-and-report step. Replaces the old two-step `/worktree-merge` + `taskfleet node report` sequence. For a feature branch and main that have both diverged so far an ordinary rebase fails, recover with `/complex-rebase` then re-run.","name":"worktree-merge","skill_schema_version":1},{"cli_version":"0.5.1","description":"Spawn an autonomous research worktree via `taskfleet run create --kind research` — multi-source background investigation that reads sources, gathers divergent perspectives, and writes a sourced markdown report committed to the repo, then merges itself back. Use when the user asks to research, investigate, survey, look into, or compare options for a topic that needs reading multiple sources and synthesizing into a sourced markdown report. Do NOT use for quick factual lookups (one `WebSearch`), single-doc summaries, debugging, code changes, or forward decisions (`/worktree-technical-decision`).","name":"worktree-research","skill_schema_version":1},{"cli_version":"0.5.1","description":"Spawn an autonomous worktree via `taskfleet run create --kind technical-decision` to drive ONE architectural / technical decision to a recorded ADR and self-merge. Use when the user says \"decide whether we should use X or Y\", \"make the architectural call on Z\", \"settle the trade-off between A and B\", or links an issue tagged decision/architecture. Do NOT use for opinions (`/llm-consult`), design ideation (`/llm-workshop`), plan review (`/llm-panel`), survey/research (`/worktree-research`), or archaeology (\"why did we choose X\" — historical, not a forward decision).","name":"worktree-technical-decision","skill_schema_version":1},{"cli_version":"0.5.1","description":"Spawn an autonomous READ-ONLY worktree via `taskfleet run create --kind spinoff` that analyses ONE already-filed bug and writes its findings back into the issue — reproduce or explain the symptom, locate the responsible code (Read/Grep only), classify it (real bug / expected behaviour / cannot tell), estimate severity, and sketch what a fix would touch. Never changes application code; the only write is the issue update, which it self-merges. Use when an existing bug issue needs understanding before a fix/defer/not-a-bug decision. For fixing a bug use `/worktree-bugfix`; for open-ended multi-source research use `/worktree-research`.","name":"worktree-bug-analysis","skill_schema_version":1},{"cli_version":"0.5.1","description":"Router for the `/worktree-*` family. Classifies a free-form request into the right variant (`/worktree-spinoff`, `/worktree-research`, `/worktree-technical-decision`, `/fan-out`) and delegates. Use when the user invokes `/worktree <free-form task>`, `/worktree <issue-slug>`, or `/worktree --flag ... <task>`, or says \"spawn a worktree for X\", \"start a worktree to do Y\", \"do this in a worktree\" without naming a specific variant. Does NOT create worktrees itself; does NOT route to `/worktree-merge` or `/complex-rebase` (those operate on existing worktrees — the user invokes them directly).","name":"worktree","skill_schema_version":1},{"cli_version":"0.5.1","description":"Summarize the current state of an active worktree session in plain product language, for a non-technical decision-maker (product owner, manager, stakeholder) who was not in the room. Use when asked to give a status update on a worktree, summarize where the worktree stands, brief the PO on what's happened so far, or run bare `/worktree-status`. Reads ONLY the current conversation context — does not run git, read files, or modify anything. NOT for PR descriptions, developer-to-developer context handoff (use `/wrap-up`), commit summaries, or daily-activity logs.","name":"worktree-status","skill_schema_version":1},{"cli_version":"0.5.1","description":"Run one round of a work-session (työrupeama, 'stint') as the ORCHESTRATOR the user talks to. The round engine: orient (pull, read operating policy, ground-truth from git, read the issuectl scheduling DAG) → plan → spawn worktrees that do the coding (never codes in this session) → own the single deploy when the project permits → report to the user in product-owner language → absorb feedback. Use when the user says 'aloitetaan rupeama', 'jatketaan @TODO.md', 'start a work session', 'let's do a round', 'do another round', or invokes bare `/stint-start`. Maximally autonomous: resume from the handoff narrative and the live issuectl DAG. Generic across projects: reads all specifics from the repo's own AGENTS.md/TODO.md and issue metadata. NOT a worktree itself; NOT a single one-off coding task (use `/worktree`); NOT the terminal handoff/wrap-up (that is `/stint-handoff`).","name":"stint-start","skill_schema_version":1},{"cli_version":"0.5.1","description":"Terminal wrap of a work-session (työrupeama, 'stint'): update the repo's TODO.md `## 🔄 Continue here` handoff narrative, verify the live issuectl scheduling DAG, then hand off via `/wrap-up` and, if the project declares one, do the test-account reset. Run at session end, on the user's go, so a fresh agent can resume from `jatketaan @TODO.md`. Use when the user says 'päätetään rupeama', 'wrap up the stint', 'hand off', 'update the handoff and wrap up', or invokes bare `/stint-handoff`. Generic across projects: reads all specifics from the repo's own AGENTS.md/TODO.md and issue metadata. NOT the round engine (that is `/stint-start`, which spawns worktrees and deploys); NOT a bare `/wrap-up` (this first updates TODO.md and verifies scheduling, then calls it); NOT a worktree itself.","name":"stint-handoff","skill_schema_version":1},{"cli_version":"0.5.1","description":"Fan out N≥5 similar, fully independent units of work as parallel autonomous worktrees via `taskfleet run create --kind fan-out` (top-level driver) plus one `--kind fan-out` child per unit (parent-pointed). Each child commits a disjoint output file inside the current git repo and merges itself back. Manages enumeration, concurrency (default 10), manifest-tracked state, and resume. Requires a git repo with a clean source branch. NOT for generic parallel commands, dependent workflows, shared-file edits, or tasks needing per-unit human review. For heterogeneous dependency-ordered features (a DAG rather than identical units), use `/orchestrate` instead.","name":"fan-out","skill_schema_version":1}],"supported_agents":["claude","pi","codex"]},"install":{"accepted_values":["claude","pi","codex","all"],"default":"all","dry_run_flag":"--dry-run","force_flag":"--force","interactive":false,"layouts":[{"agent":"claude","form":"agent-skill-tree","path":".claude/skills/<name>/..."},{"agent":"pi","form":"agent-skill-tree","path":".pi/agent/skills/<name>/..."},{"agent":"codex","form":"self-contained-prompt","path":".codex/prompts/<name>.md"}],"no_clobber_default":true,"overwrite_requires_force":true,"selection_flag":"--agent","target_flag":"--target"},"schema_version":1,"skills":[{"cli_version":"0.5.1","description":"First read for any agent that has just discovered the `taskfleet` binary mid-conversation. Teaches the overall shape of the tool — runs, supervisors, nodes, discussions, spinoffs — and the canonical create→supervise→collect-reports cycle. Use when asked \"what is taskfleet\", when the binary appears in a session for the first time, or before issuing the first non-trivial command.","name":"taskfleet-overview","skill_schema_version":1},{"cli_version":"0.5.1","description":"Read the output of `taskfleet run list` and `taskfleet run show` to inspect the state of orchestrated agent workflows (worktrees, fan-outs, spinoffs). Use when asked about run status, when triaging an in-flight orchestration, or before deciding whether to spawn, resume, or abort work.","name":"taskfleet-run-overview","skill_schema_version":1},{"cli_version":"0.5.1","description":"Spawn an autonomous spinoff worktree via taskfleet — a single fire-and-forget agent that takes a focused task, executes it in its own git worktree, and merges itself back. Use when the user wants a parallel sub-task handled without interactive review.","name":"taskfleet-spawn-spinoff","skill_schema_version":1},{"cli_version":"0.5.1","description":"Spawn an autonomous spinoff worktree agent via `taskfleet run create --kind spinoff` — one fire-and-forget agent that takes a focused task, executes it in its own git worktree, and merges itself back to the source branch. Use when the user says `/worktree-spinoff <task>`, when a parallel sub-task can be handled without interactive review, or when a driver (`/fan-out`) needs to spawn one autonomous unit. NOT for hands-on interactive review (add `--interactive` to `run create` so the supervisor waits for an explicit `run merge`/`run cancel`), N identical units (`/fan-out`), or dependency-ordered features (stint waves).","name":"worktree-spinoff","skill_schema_version":1},{"cli_version":"0.5.1","description":"Merge a completed taskfleet worktree branch back to its source/parent branch and tear the worktree down — branch rebased + merged, terminal `node report` submitted, and the tmux window + worktree + branch removed by the supervisor, all in ONE `taskfleet run merge` call. Use when an autonomous worktree (spinoff, research, technical-decision, or a fan-out unit) reaches its merge-and-report step. Replaces the old two-step `/worktree-merge` + `taskfleet node report` sequence. For a feature branch and main that have both diverged so far an ordinary rebase fails, recover with `/complex-rebase` then re-run.","name":"worktree-merge","skill_schema_version":1},{"cli_version":"0.5.1","description":"Spawn an autonomous research worktree via `taskfleet run create --kind research` — multi-source background investigation that reads sources, gathers divergent perspectives, and writes a sourced markdown report committed to the repo, then merges itself back. Use when the user asks to research, investigate, survey, look into, or compare options for a topic that needs reading multiple sources and synthesizing into a sourced markdown report. Do NOT use for quick factual lookups (one `WebSearch`), single-doc summaries, debugging, code changes, or forward decisions (`/worktree-technical-decision`).","name":"worktree-research","skill_schema_version":1},{"cli_version":"0.5.1","description":"Spawn an autonomous worktree via `taskfleet run create --kind technical-decision` to drive ONE architectural / technical decision to a recorded ADR and self-merge. Use when the user says \"decide whether we should use X or Y\", \"make the architectural call on Z\", \"settle the trade-off between A and B\", or links an issue tagged decision/architecture. Do NOT use for opinions (`/llm-consult`), design ideation (`/llm-workshop`), plan review (`/llm-panel`), survey/research (`/worktree-research`), or archaeology (\"why did we choose X\" — historical, not a forward decision).","name":"worktree-technical-decision","skill_schema_version":1},{"cli_version":"0.5.1","description":"Spawn an autonomous READ-ONLY worktree via `taskfleet run create --kind spinoff` that analyses ONE already-filed bug and writes its findings back into the issue — reproduce or explain the symptom, locate the responsible code (Read/Grep only), classify it (real bug / expected behaviour / cannot tell), estimate severity, and sketch what a fix would touch. Never changes application code; the only write is the issue update, which it self-merges. Use when an existing bug issue needs understanding before a fix/defer/not-a-bug decision. For fixing a bug use `/worktree-bugfix`; for open-ended multi-source research use `/worktree-research`.","name":"worktree-bug-analysis","skill_schema_version":1},{"cli_version":"0.5.1","description":"Router for the `/worktree-*` family. Classifies a free-form request into the right variant (`/worktree-spinoff`, `/worktree-research`, `/worktree-technical-decision`, `/fan-out`) and delegates. Use when the user invokes `/worktree <free-form task>`, `/worktree <issue-slug>`, or `/worktree --flag ... <task>`, or says \"spawn a worktree for X\", \"start a worktree to do Y\", \"do this in a worktree\" without naming a specific variant. Does NOT create worktrees itself; does NOT route to `/worktree-merge` or `/complex-rebase` (those operate on existing worktrees — the user invokes them directly).","name":"worktree","skill_schema_version":1},{"cli_version":"0.5.1","description":"Summarize the current state of an active worktree session in plain product language, for a non-technical decision-maker (product owner, manager, stakeholder) who was not in the room. Use when asked to give a status update on a worktree, summarize where the worktree stands, brief the PO on what's happened so far, or run bare `/worktree-status`. Reads ONLY the current conversation context — does not run git, read files, or modify anything. NOT for PR descriptions, developer-to-developer context handoff (use `/wrap-up`), commit summaries, or daily-activity logs.","name":"worktree-status","skill_schema_version":1},{"cli_version":"0.5.1","description":"Run one round of a work-session (työrupeama, 'stint') as the ORCHESTRATOR the user talks to. The round engine: orient (pull, read operating policy, ground-truth from git, read the issuectl scheduling DAG) → plan → spawn worktrees that do the coding (never codes in this session) → own the single deploy when the project permits → report to the user in product-owner language → absorb feedback. Use when the user says 'aloitetaan rupeama', 'jatketaan @TODO.md', 'start a work session', 'let's do a round', 'do another round', or invokes bare `/stint-start`. Maximally autonomous: resume from the handoff narrative and the live issuectl DAG. Generic across projects: reads all specifics from the repo's own AGENTS.md/TODO.md and issue metadata. NOT a worktree itself; NOT a single one-off coding task (use `/worktree`); NOT the terminal handoff/wrap-up (that is `/stint-handoff`).","name":"stint-start","skill_schema_version":1},{"cli_version":"0.5.1","description":"Terminal wrap of a work-session (työrupeama, 'stint'): update the repo's TODO.md `## 🔄 Continue here` handoff narrative, verify the live issuectl scheduling DAG, then hand off via `/wrap-up` and, if the project declares one, do the test-account reset. Run at session end, on the user's go, so a fresh agent can resume from `jatketaan @TODO.md`. Use when the user says 'päätetään rupeama', 'wrap up the stint', 'hand off', 'update the handoff and wrap up', or invokes bare `/stint-handoff`. Generic across projects: reads all specifics from the repo's own AGENTS.md/TODO.md and issue metadata. NOT the round engine (that is `/stint-start`, which spawns worktrees and deploys); NOT a bare `/wrap-up` (this first updates TODO.md and verifies scheduling, then calls it); NOT a worktree itself.","name":"stint-handoff","skill_schema_version":1},{"cli_version":"0.5.1","description":"Fan out N≥5 similar, fully independent units of work as parallel autonomous worktrees via `taskfleet run create --kind fan-out` (top-level driver) plus one `--kind fan-out` child per unit (parent-pointed). Each child commits a disjoint output file inside the current git repo and merges itself back. Manages enumeration, concurrency (default 10), manifest-tracked state, and resume. Requires a git repo with a clean source branch. NOT for generic parallel commands, dependent workflows, shared-file edits, or tasks needing per-unit human review. For heterogeneous dependency-ordered features (a DAG rather than identical units), use `/orchestrate` instead.","name":"fan-out","skill_schema_version":1}],"supported_agents":["claude","pi","codex"],"warnings":[]}
