crates/taskfleet/tests/snapshots/envelope_snapshots__skill_show_unknown_error.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
{"schema_version":1,"error":{"code":"skill_not_found","message":"no skill named 'no-such-skill'; available: orchestratectl-overview, octl-run-overview, octl-spawn-spinoff, worktree-spinoff, worktree-merge, worktree-research, worktree-technical-decision, worktree-bug-analysis, worktree, worktree-status, stint-start, stint-handoff, fan-out","invalid_value":"no-such-skill","expected":{"one_of":["orchestratectl-overview","octl-run-overview","octl-spawn-spinoff","worktree-spinoff","worktree-merge","worktree-research","worktree-technical-decision","worktree-bug-analysis","worktree","worktree-status","stint-start","stint-handoff","fan-out"]}}}
