crates/taskfleet/tests/snapshots/envelope_snapshots__spinoff_list_jsonl.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
{"schema_version":1,"data":{"run_id":"[RUN_ID]","proposals":[{"proposal_id":"s-spinaaaaaa","node_id":"n-0001","status":"pending","proposed_title":"seed proposal","proposed_kind":"spinoff","proposed_at":"[TS]"}]},"warnings":[]}
