crates/taskfleet/tests/snapshots/envelope_snapshots__spinoff_list_text.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
s-spinaaaaaa	pending	n-0001	spinoff	seed proposal
