crates/taskfleet/tests/snapshots/envelope_snapshots__spinoff_reject_empty_reason_error.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
{"schema_version":1,"error":{"code":"invalid_value","message":"--reason must not be empty or whitespace-only","invalid_value":"   "}}
