crates/taskfleet/tests/snapshots/envelope_snapshots__spinoff_reject_json.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
expression: value
---
{
  "schema_version": 1,
  "data": {
    "run_id": "[RUN_ID]",
    "proposal_id": "s-spinaaaaaa",
    "reason": "not now",
    "seq": 4
  },
  "warnings": []
}
