crates/taskfleet/tests/snapshots/envelope_snapshots__version_json.snap
---
source: crates/taskfleet/tests/envelope_snapshots.rs
assertion_line: 234
expression: value
---
{
  "schema_version": 1,
  "data": {
    "version": "0.5.1",
    "commit": "[COMMIT]",
    "skills": [
      {
        "name": "taskfleet-overview",
        "cli_version": "0.5.1",
        "schema_version": 1
      },
      {
        "name": "taskfleet-run-overview",
        "cli_version": "0.5.1",
        "schema_version": 1
      },
      {
        "name": "taskfleet-spawn-spinoff",
        "cli_version": "0.5.1",
        "schema_version": 1
      },
      {
        "name": "worktree-spinoff",
        "cli_version": "0.5.1",
        "schema_version": 1
      },
      {
        "name": "worktree-merge",
        "cli_version": "0.5.1",
        "schema_version": 1
      },
      {
        "name": "worktree-research",
        "cli_version": "0.5.1",
        "schema_version": 1
      },
      {
        "name": "worktree-technical-decision",
        "cli_version": "0.5.1",
        "schema_version": 1
      },
      {
        "name": "worktree-bug-analysis",
        "cli_version": "0.5.1",
        "schema_version": 1
      },
      {
        "name": "worktree",
        "cli_version": "0.5.1",
        "schema_version": 1
      },
      {
        "name": "worktree-status",
        "cli_version": "0.5.1",
        "schema_version": 1
      },
      {
        "name": "stint-start",
        "cli_version": "0.5.1",
        "schema_version": 1
      },
      {
        "name": "stint-handoff",
        "cli_version": "0.5.1",
        "schema_version": 1
      },
      {
        "name": "fan-out",
        "cli_version": "0.5.1",
        "schema_version": 1
      }
    ],
    "schema_version": 1,
    "supported_schemas": [
      1
    ],
    "supported_schemas_by_name": {
      "envelope": [
        1
      ],
      "state": [
        1
      ],
      "config": [
        2
      ],
      "help": [
        3
      ],
      "skill": [
        1
      ]
    },
    "state_schema_version": 1,
    "supported_state_schemas": [
      1
    ]
  },
  "warnings": []
}
